--- a/HTML/relatar.html
+++ b/HTML/relatar.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Relatar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo">Refugio-2145</div>
+        <navbar>
+            <ul class="menu">
+                <li><a href="index.html">Portal</a></li>
+                <li><a href="criaturas.html">Criaturas</a></li>
+                <li><a href="tacticas.html">Tacticas</a></li>
+                <li><a href="recursos.html">Recursos</a></li>
+            </ul>
+        </navbar>
+    </header>
+
+    <h1>Formulario de Avistamento</h1>
+
+    <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
+        <label for="floatingInputDisabled">Nome</label>
+      </div>
+      <div class="form-floating mb-3">
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextareaDisabled" disabled></textarea>
+        <label for="floatingTextareaDisabled">Local</label>
+      </div>
+      <div class="form-floating mb-3">
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+        <label for="floatingTextarea2Disabled">Tipo de criatura</label>
+      </div>
+      <div class="form-floating">
+        <select class="form-select" id="floatingSelectDisabled" aria-label="Floating label disabled select example" disabled>
+          <option selected>Refugio mais perto</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <label for="floatingSelectDisabled">Works with selects</label>
+      </div>
 
