--- a/HTML/criaturas.html
+++ b/HTML/criaturas.html
@@ -203,6 +203,6 @@
   </div>
 
  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.minjs"></script>
 </body>
 </html>
