--- a/HTML/recurso.html
+++ b/HTML/recurso.html
@@ -20,14 +20,60 @@
         </navbar>
     </header>
 
-    <h1>Locais Seguros</h1>
-    <ul class="list-group">
-        <li class="list-group-item">Items para sobreviver: Faca, Silver Tape, Rádio a Bateria, pilhas, água e alimentos não perecíveis, itens de primeiros socorros, lanterna com pilhas extras, rádio portátil, kit de higiene, canivete, fósforos/isqueiro e cobertor térmico. </li>
-        <li class="list-group-item">Coordenadas: CONOP do Comando Estratégico de Defesa dos EUA que descreve um plano para os Estados Unidos e seus militares se defenderem contra zumbis em um cenário fictício de treinamento militar.</li>
-        <li class="list-group-item">Nivel de segurança:</li>
-        <li class="list-group-item">Local seguro: Abrigo-2145</li>
-      </ul>
 
+    <section class="mt-5 mb-5">
+        <h2 class="text-center mb-4 text-primary">Postos Seguros.</h2>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered align-middle">
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">Nome:</th>
+                        <th scope="col">Descricação:</th>
+                        <th scope="col">Coordenadas:</th>
+                        <th scope="col">Nivel de Segurança:</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row"> Fortaleza São Bento.</th>
+                        <td>Antigo quartel transformado em bastião principal. Possui energia, arsenal leve e muralhas reforçadas.</td>
+                        <td class="text-info">Lat -23.5512, Lon -46.6340</td>
+                        <td class="text-info">Alto</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Refúgio das Ruínas </th>
+                        <td>Biblioteca antiga adaptada. Boa cobertura e estoque de mantimentos, mas poucos defensores.</td>
+                        <td class="text-info">Lat -23.5470, Lon -46.6405</td>
+                        <td class="text-info">Médio</td>
+                    </tr>
+                    <tr>
+                        <th scope="row"> Hospital Central (setor B)</th>
+                        <td>Área funcional parcialmente segura, com medicamentos e abrigos subterrâneos. Risco moderado em incursões.</td>
+                        <td class="text-info">Lat -23.5535, Lon -46.6202</td>
+                        <td class="text-info">Médio</td>
+                    </tr>
+                    <tr>
+                        <th scope="row"></th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Estação do Farol</th>
+                        <td>Torre alta equipada com holofotes e sinalizadores. Serve como ponto de comunicação e vigilância noturna.</td>
+                        <td class="text-info">Lat -23.5465, Lon -46.6180</td>
+                        <td class="text-info">Alto</td>
+                    </tr>
+                    <tr>
+                        <th scope="row"> Abrigo do Mercado</th>
+                        <td>Refúgio comunitário improvisado; pouca segurança, mas fácil acesso para sobreviventes civis.</td>
+                        <td class="text-info"> Lat -23.5595, Lon -46.6367</td>
+                        <td class="text-info">Baixo</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
