--- a/HTML/relatar.html
+++ b/HTML/relatar.html
@@ -20,29 +20,18 @@
         </navbar>
     </header>
 
-    <h1>Formulario de Avistamento</h1>
 
-    <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
-        <label for="floatingInputDisabled">Nome</label>
-      </div>
-      <div class="form-floating mb-3">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextareaDisabled" disabled></textarea>
-        <label for="floatingTextareaDisabled">Local</label>
-      </div>
-      <div class="form-floating mb-3">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
-        <label for="floatingTextarea2Disabled">Tipo de criatura</label>
-      </div>
-      <div class="form-floating">
-        <select class="form-select" id="floatingSelectDisabled" aria-label="Floating label disabled select example" disabled>
-          <option selected>Refugio mais perto</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-        <label for="floatingSelectDisabled">Works with selects</label>
-      </div>
+    <h1>Formulário de Avistamento – Divisão de Contenção de Anomalias</h1>
+    <div class="alert alert-success" role="alert">
+      <h4 class="alert-heading">Atenção, sobrevivente.</h4>
+      <p> Este formulário deve ser preenchido somente após garantir sua segurança e isolar a área do avistamento.</p>
+      <hr>
+      <p class="mb-0">Se houver risco de contaminação ou presença de matéria distorcida, abandone o local imediatamente.
+        As informações registradas aqui serão analisadas pelos Observadores da Ordo Reclamata — última linha de defesa contra “A Falha”.
+
+
+
+        
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
