--- a/HTML/taticas.html
+++ b/HTML/taticas.html
@@ -218,7 +218,7 @@ footer {
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Próximo</span>
+      <span class="visually-hidden">Próximso</span>
     </button>
   </div>
 
@@ -246,31 +246,5 @@ footer {
 
 </body>
 </html>
-=======
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-</head>
-<body>
-    <header>
-        <div class="logo">Refugio-2145</div>
-        <navbar>
-            <ul class="menu">
-                <li><a href="index.html">Portal</a></li>
-                <li><a href="criaturas.html">Criaturas</a></li>
-                <li><a href="tacticas.html">Tacticas</a></li>
-                <li><a href="recursos.html">Recursos</a></li>
-            </ul>
-        </navbar>
-    </header>
-
-    
 
 
-</body>
-</html>
->>>>>>> 7292b89f4010b556da0c443eff68954f697fdb06
