--- a/HTML/criaturas.html
+++ b/HTML/criaturas.html
@@ -1,229 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-</head>
-<body>
-    <header>
-        <div class="logo">Refugio-2145</div>
-        <navbar>
-            <ul class="menu">
-                <li><a href="index.html">Portal</a></li>
-                <li><a href="criaturas.html">Criaturas</a></li>
-                <li><a href="tacticas.html">Tacticas</a></li>
-                <li><a href="recursos.html">Recursos</a></li>
-            </ul>
-        </navbar>
-    </header>
-
-    
-
-
-</body>
-</html>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bestiário</title>
-
-
+  <title>Refúgio-2145 | Criaturas</title>
+  <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
-
-  
-  <style>
-    body {
-      font-family: 'Cinzel', serif;
-      background-color: #f8f9fa;
-    }
-
-    h1 {
-      text-align: center;
-      margin-top: 40px;
-      margin-bottom: 50px;
-      font-weight: 700;
-      color: #2c2c2c;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    }
-
-    .card {
-      height: 100%;
-    }
-
-    .card-img-top {
-      height: 225px;
-      object-fit: cover; 
-    }
-
-    .card-text {
-      font-size: 1rem;
-      color: #333;
-    }
-
-    .btn {
-      font-family: 'Cinzel', serif;
-      font-weight: 600;
-    }
-  </style>
 </head>
-
 <body>
-  <h1>Bestiário</h1>
 
-  <div class="album py-5 bg-body-tertiary">
+  <!-- HEADER -->
+  <header class="apocalypse-header">
+    <div class="hazard-strip"></div>
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-
-        <!-- CARD 1 -->
-        <div class="col">
-          <div class="card shadow-sm h-100">
-            <img src="../assets/img/Zumbi-Vácuo.png" class="card-img-top" alt="zombi">
-            <div class="card-body">
-              <p class="card-text">Zumbi Vácuo (um corpo infectado Pós-Falha).</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- CARD 2 -->
-        <div class="col">
-          <div class="card shadow-sm h-100">
-            <img src="../assets/img/Teia-Cinza.png" class="card-img-top" alt="Teia-Cinza">
-            <div class="card-body">
-              <p class="card-text">Teia-Cinza.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- CARD 3 -->
-        <div class="col">
-          <div class="card shadow-sm h-100">
-            <img src="../assets/img/O Queimado.png" class="card-img-top" alt="Queimado">
-            <div class="card-body">
-              <p class="card-text">O Queimado.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- CARD 4 -->
-        <div class="col">
-          <div class="card shadow-sm h-100">
-            <img src="imagens/minotauro.jpg" class="card-img-top" alt="nevoa andante">
-            <div class="card-body">
-              <p class="card-text">Névoa Andante.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- CARD 5 -->
-        <div class="col">
-          <div class="card shadow-sm h-100">
-            <img src="imagens/sereia.jpg" class="card-img-top" alt="carniçal">
-            <div class="card-body">
-              <p class="card-text">Carniçal das Ruas.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- CARD 6 -->
-        <div class="col">
-          <div class="card shadow-sm h-100">
-            <img src="imagens/hidra.jpg" class="card-img-top" alt="Hidra">
-            <div class="card-body">
-              <p class="card-text">Andarilho Ferrugento.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-                <!-- CARD 7 -->
-                <div class="col">
-                    <div class="card shadow-sm h-100">
-                      <img src="../assets/img/Rastejante-de-Cinzas.png" class="card-img-top" alt="Hidra">
-                      <div class="card-body">
-                        <p class="card-text">Rastejante de Cinzas.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                          <!-- CARD 8 -->
-        <div class="col">
-            <div class="card shadow-sm h-100">
-              <img src="imagens/hidra.jpg" class="card-img-top" alt="Hidra">
-              <div class="card-body">
-                <p class="card-text">Sussurrante.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-                  <!-- CARD 9 -->
-        <div class="col">
-            <div class="card shadow-sm h-100">
-              <img src="imagens/hidra.jpg" class="card-img-top" alt="Hidra">
-              <div class="card-body">
-                <p class="card-text">Eco Morto.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Visualizar</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+      <div class="logo-area">
+        <span class="hazard-icon">☢️</span>
+        <span class="logo-text">Refúgio-2145</span>
       </div>
+      <ul class="apocalypse-menu">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="criaturas.html">Criaturas</a></li>
+        <li><a href="recursos.html">Recursos</a></li>
+        <li><a href="relatar.html">Relatar</a></li>
+        <li><a href="taticas.html">Táticas</a></li>
+      </ul>
     </div>
-  </div>
+  </header>
 
+  <!-- CONTEÚDO -->
+  <main class="container">
+    <h2>Criaturas Mutantes</h2>
+    <p>O Refúgio está cercado por criaturas que evoluíram após o apocalipse. Conhecer seus padrões é essencial para sobreviver.</p>
+    <ul>
+      <li>Zumbis radioativos</li>
+      <li>Lobos mutantes</li>
+      <li>Insetos gigantes</li>
+      <li>Criaturas aquáticas anômalas</li>
+    </ul>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="apocalypse-footer">
+    <div class="hazard-strip-footer"></div>
+    <div class="footer-content">
+      <span class="footer-icon">☢️</span>
+      <p>© 2145 Refúgio. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
