--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,38 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Refúgio-2145</title>
-  <link rel="stylesheet" href="../style.css">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <title>Refúgio-2145 | Início</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Terceiro exemplo de barra de navegação">
-    <div class="container-fluid"> <a class="navbar-brand" href="#"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Expandir em sm</font></font></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
-        aria-controls="navbarsExample03" aria-expanded="false" aria-label="Alternar navegação"> <span class="navbar-toggler-icon"></span> </button>
-        <div class="collapse navbar-collapse" id="navbarsExample03">
-            <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-                <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Lar</font></font></a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Link</font></font></a> </li>
-                <li class="nav-item"> <a class="nav-link disabled" aria-disabled="true"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Desabilitado</font></font></a> </li>
-                <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Suspenso</font></font></a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Ação</font></font></a></li>
-                        <li><a class="dropdown-item" href="#"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Outra ação</font></font></a></li>
-                        <li><a class="dropdown-item" href="#"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Outra coisa aqui</font></font></a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form role="search">
-                <input class="form-control" type="search" placeholder="Procurar" aria-label="Procurar"> </form>
-        </div>
+  
+  <header class="apocalypse-header">
+    <div class="hazard-strip"></div>
+    <div class="container">
+      <div class="logo-area">
+        <span class="hazard-icon">☢️</span>
+        <span class="logo-text">Refúgio-2145</span>
+      </div>
+      <ul class="apocalypse-menu">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="criaturas.html">Criaturas</a></li>
+        <li><a href="recursos.html">Recursos</a></li>
+        <li><a href="relatar.html">Relatar</a></li>
+        <li><a href="taticas.html">Táticas</a></li>
+      </ul>
     </div>
-</nav>
+  </header>
 
+  
+  <main class="container">
+    <h2>Bem-vindo ao Refúgio-2145</h2>
+    <p>O mundo mudou. Sobreviventes lutam por recursos, enfrentam criaturas mutantes e tentam manter a humanidade viva.</p>
+    <p>Explore os menus acima para descobrir criaturas, recursos disponíveis, estratégias de sobrevivência e relatar encontros.</p>
+  </main>
 
+  
+  <footer class="apocalypse-footer">
+    <div class="hazard-strip-footer"></div>
+    <div class="footer-content">
+      <span class="footer-icon">☢️</span>
+      <p>© 2145 Refúgio. Todos os direitos reservados.</p>
+    </div>
+  </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
